<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GoMuscu</string>
    <string name="app_title">GoMuscu</string>
    <string name="btn_edit_planning">Editer\nplanning</string>
    <string name="btn_edit_seances">Editer\nséances</string>
    <string name="btn_view_historique">Historique\nséances</string>
    <string name="stat_total_temps">Temps total cumulé</string>
    <string name="stat_total_seances">Séances effectuées</string>
    <string name="stat_total_exos">Exercices faits</string>
    <string name="stat_moyenne_temps">Durée moyenne</string>
    <string name="btn_creer_seance">Créer une nouvelle séance</string>
    <string name="hint_recherche_seance">Intitulé de la séance recherchée</string>
    <string name="btn_retour_menu">Retour au menu</string>
    <string name="btn_annuler">Annuler</string>
    <string name="btn_sauvegarder">Sauvegarder</string>
    <string name="hint_nouvelle_seance">Intitulé nouvelle séance</string>
    <string name="tv_nom_exo">Nom exercice :</string>
    <string name="btn_ajout_exo">Ajouter un exercice</string>
    <string name="btn_supprimer">Supprimer</string>
    <string name="btn_modifier">Modifier</string>
    <string name="btn_demarrer_seance">Démarrer la séance du jour</string>
    <string name="hint_nb_reps">Nb répet</string>
    <string name="hint_poids">Poids</string>
    <string name="btn_valider">OK</string>
    <string name="seance_btn_demarrer">Démarrer</string>
    <string name="seance_btn_repos">Repos</string>
    <string name="seance_btn_reprise">Reprise</string>
    <string name="seance_btn_fin">Terminer</string>
    <string name="seance_duree_totale">Durée totale</string>
    <string name="seance_duree_repos">Durée repos</string>
    <string name="creer_journee">Planifier une séance</string>
    <string name="tv_editer_planning">Editer le planning</string>
    <string name="tv_historique_seances">Historique des séances</string>
    <string name="read_error">Impossible de lire les news</string>
    <string name="connect_error">Impossible de se connecter à newsapi.org</string>

    <!--    API    -->
    <string name="baseUrl">http://newsapi.org/v2/top-headlines</string>
    <string name="apiKey">fbf7cfdf0607426a9a7245c6d477ee38</string>
    <string name="country">fr</string>
    <string name="category">sports</string>

</resources>
