<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".CreerSeance">

    <EditText
        android:id="@+id/ed_nouvelle_seance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/hint_nouvelle_seance"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClickAjouterExercice"
        android:text="@string/btn_ajout_exo" />

    <ScrollView
        android:id="@+id/sv_exercice"
        android:layout_width="match_parent"
        android:layout_weight="0.75"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/lin_lay_exercice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickAnnuler"
            android:text="@string/btn_annuler" />

        <Button
            android:id="@+id/btn_sauvegarder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickSauvegarder"
            android:text="@string/btn_sauvegarder" />

    </LinearLayout>
</LinearLayout>