<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".DemarrerSeance">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:id="@+id/tvNomSeance" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:id="@+id/rvListeExos" />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:columnCount="2"
        android:rowCount="2"
        android:useDefaultMargins="true" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_column="0"
            android:layout_row="0"
            android:onClick="onClickBtnGlobal"
            android:text="@string/seance_btn_demarrer"
            android:id="@+id/seance_btn_global" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_column="1"
            android:layout_row="0"
            android:onClick="onClickBtnRepos"
            android:enabled="false"
            android:text="@string/seance_btn_repos"
            android:id="@+id/seance_btn_repos"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_columnWeight="1"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:text="@string/seance_duree_totale" />

            <Chronometer
                android:id="@+id/chronoGlobal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="24dp"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_columnWeight="1"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:text="@string/seance_duree_repos" />

            <Chronometer
                android:id="@+id/chronoRepos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="24dp"
                android:gravity="center_horizontal"/>
        </LinearLayout>



    </GridLayout>



</LinearLayout>